test/libhyperion/syntaxTests/types/address/address_literal_to_payable_err.hyp
contract C {
    function f() public pure {
        address payable a = address(Q000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000219ab540356cBB839Cbe05303d7705Fa);
        address payable b = Q000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000219ab540356cBB839Cbe05303d7705Fa;
    }
}
// ----
// TypeError 9574: (52-210): Type address is not implicitly convertible to expected type address payable.
// TypeError 9574: (220-369): Type address is not implicitly convertible to expected type address payable.
